delete sql server db and add sqlite db and add update user service and etc

--- a/ITTasks/Views/Sprints/CreateSprint.cshtml
+++ b/ITTasks/Views/Sprints/CreateSprint.cshtml
@@ -30,7 +30,7 @@
 			</div>
 			<input type="submit" class="btn btn-outline-success" value="ثبت" />
 				<span class="text-danger">@ViewBag.ErrorMessage</span>
-				<span class="text-danger">@ViewBag.Successful</span>
+				<span class="text-success">@ViewBag.Successful</span>
 		</div>
 	</form>
 </div>
