--- a/ITTasks/Views/Tasks/AllTask.cshtml
+++ b/ITTasks/Views/Tasks/AllTask.cshtml
@@ -21,7 +21,11 @@
 	</div>
 	<div class="col-8">
 		<div class="container mt-3 d-flex justify-content-center flex-wrap">
-			<h2>موردی برای نمایش وجود ندارد</h2>
+			@if (Model.Count == 0)
+			{
+				<h2>موردی برای نمایش وجود ندارد</h2>
+			}
+
 			@if (Model.Count != 0)
 			{
 				<table class="table data-table table-hover text-nowrap display col-12">
