--- a/ITTasks/Views/Tasks/CreateTask.cshtml
+++ b/ITTasks/Views/Tasks/CreateTask.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ITTasks.Infrastructure.Helper;
 @using ITTasks.Models.DTOS.Tasks;
+@using ITTasks.Statics;
 @model ITTaskCreateDto
 
 @section Styles{
@@ -75,7 +76,7 @@
 				<select class="form-select" asp-for="SprintId" asp-items="@(new SelectList(Model.Sprints.AsEnumerable(),"Id","Title",Model.SprintId))">
 					<option class="dropdown-item" selected disabled>...انتخاب اسپرینت...</option>
 				</select>
-				<span asp-validation-for="TaskTypeId" class="text-danger small"></span>
+				<span asp-validation-for="SprintId" class="text-danger small"></span>
 			</div>
 			<div class="mb-3">
 				<label asp-for="UserId" class="form-label">نام فرد انجام دهنده:</label>
@@ -100,9 +101,9 @@
 			</div>
 
 			<div class="mb-3">
+				<label asp-for="Date" class="form-label">تاریخ:</label>
 				<input id="expiration-date" dir="auto" class="form-control" placeholder="@Html.DisplayNameFor(model => model.Date)" autocomplete="off">
 				<input asp-for="Date" hidden>
-				<label asp-for="Date" class="form-label">تاریخ:</label>
 				<span asp-validation-for="Date" class="text-danger small"></span>
 			</div>
 			<div class="mb-3">
@@ -121,7 +122,11 @@
 
 	<div class="col-8">
 		<div class="container mt-3 d-flex justify-content-center flex-wrap">
-			<h2>موردی برای نمایش وجود ندارد</h2>
+			@if (Model.ITTasks.Count == 0)
+			{
+				<h2>موردی برای نمایش وجود ندارد</h2>
+			}
+
 			@if (Model.ITTasks.Count != 0)
 			{
 				<table class="table data-table table-hover text-nowrap display col-12">
@@ -159,7 +164,7 @@
 						}
 
 					</tbody>
-				</table>	
+				</table>
 				<div class="col-3"></div>
 				<div class="d-flex col-6 justify-content-center">
 					@Html.PageLinks(@Model.pageInfo, x => Url.Action("CreateTask",
@@ -183,8 +188,10 @@
 	<script src="~/lib/pwt.datepicker/dist/js/persian-date.min.js"></script>
 	<script src="~/lib/pwt.datepicker/dist/js/persian-datepicker.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	<script type="text/javascript" src="~/lib/data-tables/datatables.min.js"></script>
-	<script type="text/javascript" src="~/assets/js/datatable.js"></script>
+	<script src="sweetalert2.min.js"></script>
+	<link rel="stylesheet" href="sweetalert2.min.css">
+	@*<script type="text/javascript" src="~/lib/data-tables/datatables.min.js"></script>
+	<script type="text/javascript" src="~/assets/js/datatable.js"></script>*@
 	@{
 		await Html.RenderPartialAsync("_ValidationScriptsPartial");
 	}
@@ -242,7 +249,7 @@
 
 
 			fetch("/Tasks/DeleteTask/" + taskToDeleteId, {
-				method: "DELETE", // or 'PUT'
+				method: "POST", // or 'PUT'
 				headers: {
 					"Content-Type": "application/json",
 				},
@@ -250,7 +257,7 @@
 				console.log(res, 'res')
 				if (res.errorCode == 1) {
 					setTimeout(function () {
-						location.replace("https://localhost:7180/Tasks/CreateTask")
+						location.replace('@Urls.BaseUrl')
 					}, 2000)
 
 					DeleteAlert()
