--- a/ITTasks/Views/Reports/Reports_Partial.cshtml
+++ b/ITTasks/Views/Reports/Reports_Partial.cshtml
@@ -45,7 +45,7 @@
 	
 </style>
 
-<div class="container mt-3 d-flex justify-content-center flex-wrap bg-gray-custom border-radius-5">
+<div class="container-fluid mt-3 d-flex justify-content-center flex-wrap bg-gray-custom border-radius-5">
 	@if (Model.Count == 0)
 	{
 		<h2>موردی برای نمایش وجود ندارد</h2>
