--- a/ITTasks/Views/Tasks/CreateTask.cshtml
+++ b/ITTasks/Views/Tasks/CreateTask.cshtml
@@ -113,6 +113,10 @@
 		text-align: left;
 	}
 
+	.table.dataTable thead th, table.dataTable thead td, table.dataTable tfoot th, table.dataTable tfoot td {
+		 text-align: center;
+	}
+
 </style>
 
 @*<div id="editModal" class="w-100 position-absolute" style="height:700px;display:none;z-index:999">*@
