--- a/ITTasks/Views/Reports/Reporting.cshtml
+++ b/ITTasks/Views/Reports/Reporting.cshtml
@@ -338,7 +338,7 @@
 				console.log(result);
 				var data = new google.visualization.DataTable();
 				data.addColumn('string', 'SprintTitle');
-				data.addColumn('number', 'جمع ساعت');
+				data.addColumn('number', 'دقیقه');
 				var dataArray = [];
 				$.each(result.sprintsReport, function (i, obj) {
 					console.log(obj)
@@ -371,7 +371,7 @@
 				console.log(result);
 				var data = new google.visualization.DataTable();
 				data.addColumn('string', 'UnitName');
-				data.addColumn('number', 'جمع ساعت');
+				data.addColumn('number', 'دقیقه');
 				var dataArray = [];
 				$.each(result.unitsReport, function (i, obj) {
 					console.log(obj)
@@ -394,7 +394,7 @@
 				console.log(result);
 				var data = new google.visualization.DataTable();
 				data.addColumn('string', 'TaskTypeTitle');
-				data.addColumn('number', 'جمع ساعت');
+				data.addColumn('number', 'دقیقه');
 				var dataArray = [];
 				$.each(result.taskTypesReport, function (i, obj) {
 					console.log(obj)
@@ -417,7 +417,7 @@
 				console.log(result);
 				var data = new google.visualization.DataTable();
 				data.addColumn('string', 'UserName');
-				data.addColumn('number', 'جمع ساعت');
+				data.addColumn('number', 'دقیقه');
 				var dataArray = [];
 				$.each(result.usersReport, function (i, obj) {
 					console.log(obj)
