--- a/ITTasks/Views/Shared/_Layout.cshtml
+++ b/ITTasks/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" title="تمامی تسک ها" asp-area="" asp-controller="Reports" asp-action="Reporting">گزارش گیری</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" title="دریافت فایل اکسل ساخت تسک" asp-area="" asp-controller="Tasks" asp-action="CreateTaskFile"> اکسل ساخت تسک</a>
+                        </li>
                         </ul>
                     </div>
                 </div>
