--- a/ITTasks/Views/User/AllUser_Partial.cshtml
+++ b/ITTasks/Views/User/AllUser_Partial.cshtml
@@ -1,6 +1,9 @@
 ﻿@using ITTasks.Models.DTOS.Users;
 @model List<UserDto>
 
+@{
+	Layout = "_Partials_Layout";
+}
 
 	<style>
 		.form-check .form-check-input {
@@ -41,12 +44,15 @@
 
 
 @section Scripts {
+	        
 
 			<script src="~/lib/pwt.datepicker/dist/js/persian-date.min.js"></script>
 			<script src="~/lib/pwt.datepicker/dist/js/persian-datepicker.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 			<script type="text/javascript" src="~/lib/data-tables/datatables.min.js"></script>
 			<script type="text/javascript" src="~/assets/js/datatable.js"></script>
+			<script src="~/lib/jquery/dist/jquery.min.js"></script>
+ 
 			@{
 				await Html.RenderPartialAsync("_ValidationScriptsPartial");
 			}
@@ -77,7 +83,7 @@
                         contentType: "application/json; charset=utf-8",
                         dataType: "json"
 					}).done(function (result) {
-						console.log(result);
+						
 					});
 
 				}
